# investor-match-ai

./: .env.example  .eslintrc.js  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  TESTING-GUIDE.md  complete-plan.md  context-for-code-agent.md  current-plan.md  data_model_schema_for_firestore.md  extract-plan.js  investormatch_schema_v9_expanded_tbd.html  load-test.sh  logs.md  package-lock.json  package.json  schema-outline.md  tsconfig.json
.amazonq/cli-todo-lists/: 1763136966829.json  1763137559721.json  1763138528953.json  1763142682768.json  1763143311020.json  1763153858540.json  1763155401558.json  1763158866551.json  1763160484701.json  1763166138118.json  1763168031302.json  1763168786541.json
docs/: RUNBOOK.md  architecture-diagram.html
postman/: investor-match-api.postman_collection.json  investor-match-introductions.postman_collection.json
scripts/: test-firebase.ts
services/agents/campaign_agent/: pyproject.toml
services/agents/campaign_agent/app/: graph.py  main.py
services/agents/campaign_agent/app/clients/: supabase.py
services/agents/campaign_agent/app/routers/: inbound.py
services/agents/campaign_agent/haven’t/: pyvenv.cfg
services/agents/campaign_agent/if/: pyvenv.cfg
services/agents/campaign_agent/scripts/: run_local_event.py
services/agents/campaign_agent/tests/: test_campaign_flow.py
services/agents/campaign_agent/tests/data/: sample_proposal_event.json
services/agents/campaign_agent/you/: pyvenv.cfg
src/: app.ts  server.ts
vibe-coding-sdk/: context-for-code-agent.md  current-plan.md  data_model_schema.md
(+272 files in other folders)
