[project]
name = "whatsapp-agent"
version = "0.1.0"
description = "FastAPI + LangGraph service for Kapso automations"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.2",
  "uvicorn[standard]==0.29.0",
  "langchain==0.1.17",
  "langgraph==0.0.50",
  "pydantic==2.7.1",
  "httpx==0.24.1",
  "supabase==2.3.3",
  "python-dotenv==1.0.1",
  "openai==1.13.3"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
  "respx==0.21.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "app"
